Support for SSH Certificates